# ai-content-engine

./: .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml
agents/: Dockerfile  pyproject.toml
agents/content_agent/: __init__.py  handler.py  main.py
agents/prompts/content/: v1.jinja  v2.jinja
agents/prompts/repair/: repair_v1.jinja
agents/prompts/review/: v1.jinja  v2.jinja
agents/review_agent/: __init__.py  handler.py  main.py
agents/shared/: __init__.py
agents/shared/bootstrap/: config.py  dependencies.py  healthcheck.py
agents/shared/contracts/: __init__.py  export_schemas.py  generation_v1.py
agents/shared/llm/: __init__.py  client.py  pricing.py
agents/shared/prompts/: __init__.py  loader.py
agents/shared/rabbit/: __init__.py  worker.py
agents/shared/rag/: __init__.py  embedder.py  reranker.py  retriever.py
agents/shared/repair/: __init__.py  repair.py
agents/shared/schemas/: __init__.py  common.py  export_json_schemas.py  retrieval_v1.py  trace_v1.py  worker_v1.py
agents/shared/tracing/: __init__.py  trace_writer.py
agents/tests/: test_content_agent.py  test_contracts.py  test_review_agent.py  test_shared_layer.py
docs/: README.md  ai-content-engine-steps.md  infra-local.md  parte-1-alteracoes.md  parte-10-alteracoes.md  parte-11-alteracoes.md  parte-12-alteracoes.md  parte-2-alteracoes.md  parte-3-alteracoes.md  parte-4-alteracoes.md  parte-5-alteracoes.md  parte-6-alteracoes.md  parte-7-alteracoes.md  parte-8-alteracoes.md  parte-9-alteracoes.md  plano-de-acao-mvp.md  questionario-decisoes-mvp.md
(+76 files in other folders)
